# realtime-assist-agent

./: .env.example  .gitignore  README.md  WEBRTC_SETUP.md  main.ipynb  pyproject.toml
backend/: .env.example  agent.py  agent_manager.py  app.py  elevenlabs_stt_service.py  peer_manager.py  room_manager.py  stt_adaptation.py  stt_phrases.yaml.example  stt_service.py  test_agent_integration.py  test_graph_interactive.py  visualize_agent.ipynb  visualize_graph.ipynb
backend/RAG_Embedding-main/: .gitignore  README.md
backend/RAG_Embedding-main/src/: JSON_dummie_embedder.py  JSON_embedder.py  PDF_embedder.py  namu_membership.py  namu_plans_crawling.py  plans_crawling.py  test_chroma_embedding.py  test_dummie_embedding.py  test_performance.py
backend/agent-for-cs-representative-main/kt_cs_agent_api/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
backend/config/: .env.example  stt_phrases.yaml.example
backend/docs/: pgvector_migration_report.md
backend/modules/: __init__.py
backend/modules/agent/: __init__.py  cache.py  config.py  (+6 more)
backend/routes/: __init__.py  agent_api.py  auth.py  consultation.py  deps.py  health.py  logs.py  signaling.py
backend/scenarios/: cancellation_risk.json  pass_inquiry.json  plan_change.json
backend/scripts/: crawl_kt_faq.py  embed_faq_to_pgvector.py  init_schema.py  migrate_chroma_to_pgvector.py
backend/test/: result_20251212_111157.txt  test_faq_semantic_cache.py  test_graph_experimental.py  test_graph_interactive.py
data/: .env.example  docker-compose.yaml
data/init/: 001_schema.sql  002_pgvector_schema.sql  003_customers.sql  004_consultation_sessions.sql
data/kt_faq/: kt_membership_faq.json
docs/: DEVELOPMENT_ISSUES_ANALYSIS.md  ER_DIAGRAM.md  LANGGRAPH_REALTIME_STREAMING.md  LOG_MANAGEMENT_IMPROVEMENT.md  PROJECT_SUMMARY.md  STT_SETUP.md  TTFT_optimization.md  WEBRTC_CONNECTION_FLOW.md  WEBRTC_SETUP.md  cloud-deployment-guide.md  jitter-buffer-delay-fix.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend-next/: MIGRATION_GUIDE.md  next.config.ts  package-lock.json
frontend/design/: dashboard.html  login.html
frontend/src/: AgentHistory.jsx  AgentPages.css  AgentRegister.jsx  App.css  App.jsx  AssistantMain.css  AssistantMain.jsx  STTComparison.css  STTComparison.jsx  VideoCall.jsx  logger.js  main.jsx  webrtc.js
gcloud-keys/: .gitkeep
transcripts/: room_123_20251119_184658.txt
(+88 files in other folders)
