[project]
name = "realtime-counselor-agent"
version = "0.1.0"
description = "Real-time counseling agent with WebRTC audio streaming and Google STT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.0.3",
    "google-cloud-speech>=2.30.0",
    "websockets>=14.1",
    "python-dotenv>=1.0.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "aiortc>=1.14.0",
    "aiohttp>=3.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
