[project]
name = "realtime-counselor-agent"
version = "0.1.0"
description = "Real-time counseling agent with WebRTC audio streaming and Google STT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-speech>=2.30.0",
    "websockets>=14.1",
    "python-dotenv>=1.0.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "aiortc>=1.14.0",
    "aiohttp>=3.13.2",
    "numpy>=2.3.5",
    "httpx>=0.27.0",
    "langchain[openai]>=1.0.8",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "langsmith>=0.4.42",
    "openai[aiohttp]>=2.8.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
